# physics-tests

src/: CMakeLists.txt  apple.cpp  main.cpp
src/CMakeModules/: FindPhysX.cmake
src/bullet/: bworld.cpp  bworld.hpp  world.cpp  world.hpp
src/jiggle/: njworld.cpp  njworld.hpp
src/lib/: converter.cpp  converter.hpp  enums.hpp  forward.hpp  gentity.cpp  gentity.hpp  graphics.cpp  graphics.hpp  math.cpp  math.hpp  mesh.hpp  object.cpp  object.hpp  pentity.cpp  pentity.hpp  test.cpp  test.hpp  testenvironment.hpp  vec.hpp  world.cpp  world.hpp
src/null/: nworld.cpp  nworld.hpp  world.cpp  world.hpp
src/ode/: oworld.cpp  oworld.hpp
src/physx/: pworld.cpp  pworld.hpp
src/tests/ballwall/: test.cpp  test.hpp
src/tests/basic/: test.cpp  test.hpp
src/tests/stairs/: test.cpp  test.hpp
